Add AI and game Logger to game